// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Inspector .fulfilled(element) 1`] = `
<div
  class="observablehq"
>
  <span>
    Surprise!
  </span>
</div>
`;

exports[`Inspector .fulfilled(value) 1`] = `
<div
  class="observablehq"
>
  <span
    class="observablehq--collapsed observablehq--inspect"
  >
    <a>
      <svg
        class="observablehq--caret"
        height="8"
        width="8"
      >
        
    
        <path
          d="M7 4L1 8V0z"
          fill="currentColor"
        />
        
  
      </svg>
      Array(3) [
    </a>
    <span
      class="observablehq--number"
    >
      1
    </span>
    , 
    <span
      class="observablehq--number"
    >
      2
    </span>
    , 
    <span
      class="observablehq--number"
    >
      3
    </span>
    ]
  </span>
</div>
`;

exports[`Inspector .fulfilled(value) 2`] = `
<div
  class="observablehq"
>
  <span
    class="observablehq--expanded observablehq--inspect"
  >
    <a>
      <svg
        class="observablehq--caret"
        height="8"
        width="8"
      >
        
    
        <path
          d="M4 7L0 1h8z"
          fill="currentColor"
        />
        
  
      </svg>
      Array(3) [
    </a>
    <div
      class="observablehq--field"
    >
      <span
        class="observablehq--index"
      >
          0
      </span>
      : 
      <span
        class="observablehq--number"
      >
        1
      </span>
    </div>
    <div
      class="observablehq--field"
    >
      <span
        class="observablehq--index"
      >
          1
      </span>
      : 
      <span
        class="observablehq--number"
      >
        2
      </span>
    </div>
    <div
      class="observablehq--field"
    >
      <span
        class="observablehq--index"
      >
          2
      </span>
      : 
      <span
        class="observablehq--number"
      >
        3
      </span>
    </div>
    ]
  </span>
</div>
`;

exports[`Inspector .pending() 1`] = `
<div
  class="observablehq observablehq--running"
/>
`;

exports[`Inspector .rejected(Error) 1`] = `
<div
  class="observablehq observablehq--error"
>
  <span
    class="observablehq--inspect"
  >
    Error: Danger!
  </span>
</div>
`;

exports[`Inspector initial state 1`] = `
<div
  class="observablehq"
/>
`;

exports[`into formats a string with JSON syntax if it doesn’t have many newlines 1`] = `
<div>
  <div
    class="observablehq"
  >
    <span
      class="observablehq--string observablehq--inspect"
    >
      "hi hi hi hi hi hi hi hi hi hi"
    </span>
  </div>
</div>
`;

exports[`into formats a string with template syntax if it has multiple newlines 1`] = `
<div>
  <div
    class="observablehq"
  >
    <span
      class="observablehq--string observablehq--inspect"
    >
      \`hi
hi
hi
hi
hi
hi
hi
hi
hi
hi\`
    </span>
  </div>
</div>
`;

exports[`into into(div) 1`] = `
<div>
  <div
    class="observablehq"
  >
    <span
      class="observablehq--number observablehq--inspect"
    >
      42
    </span>
  </div>
</div>
`;

exports[`into truncates a string with > 20 newlines 1`] = `
<div>
  <div
    class="observablehq"
  >
    <div
      class="observablehq--string observablehq--inspect"
    >
      \`hi
hi
hi
hi
hi
hi
hi
hi
hi
hi
hi
hi
hi
hi
hi
hi
hi
hi
hi
hi
      <span
        class="observablehq--string-expand"
      >
        Show 10 truncated lines
      </span>
    </div>
  </div>
</div>
`;

exports[`into truncates a string with > 20 newlines 2`] = `
<div>
  <div
    class="observablehq"
  >
    <span
      class="observablehq--string observablehq--expanded observablehq--inspect"
    >
      \`hi
hi
hi
hi
hi
hi
hi
hi
hi
hi
hi
hi
hi
hi
hi
hi
hi
hi
hi
hi
hi
hi
hi
hi
hi
hi
hi
hi
hi
hi\`
    </span>
  </div>
</div>
`;

exports[`into truncates a string with > 20 newlines 3`] = `
<div>
  <div
    class="observablehq"
  >
    <div
      class="observablehq--string observablehq--inspect"
    >
      \`hi
hi
hi
hi
hi
hi
hi
hi
hi
hi
hi
hi
hi
hi
hi
hi
hi
hi
hi
hi
      <span
        class="observablehq--string-expand"
      >
        Show 1 truncated line
      </span>
    </div>
  </div>
</div>
`;
